--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="en" ng-app>
+<html lang="en" ng-app="try">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-COMPATIBLE" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Try Angular 1.5</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+
+    <script src="js/app/app.module.js"></script>
+    <script src="js/app/app.config.js"></script>
+
+    <script src="js/app/blog-list/blog-list.module.js"></script>
+    <script src="js/app/blog-list/blog-list.component.js"></script>
 
     <style>
         .new-class {
@@ -20,16 +26,10 @@
             font-size: 120px;
         }
     </style>
+
+
 </head>
 <body>
-<h1 class="new-class" ng-class="{'other-class': name=='Jochem', 'new-class2': font==120}">Hello
-    <span ng-if="name">{{ name }}</span>
-    <span ng-if="!name">Workd</span>
-    !
-</h1>
-
-
-<input type="text" ng-model="name" placeholder="name"/>
-<input type="text" ng-model="font" placeholder="font"/>
+    <blog-list></blog-list>
 </body>
 </html>
